2002-06-25  Sam Steingold  <sds@gnu.org>

	* charstrg.d (STRING-INFO): new function
	* constsym.d, subr.d (string_info): added

2002-06-25  Sam Steingold  <sds@gnu.org>

	* stream.d (test_external_format_arg): fixed for the 2002-06-19
	patch (new MAKE-ENCODING keyword arg)

2002-06-20  Bruno Haible  <bruno@clisp.org>

	* lispbibl.d (CHART_STRUCT): Enable for gcc >= 3.0.

2002-06-20  Bruno Haible  <bruno@clisp.org>

	* lispbibl.d (sstring_): Define using chart.
	(Sstring): Likewise.
	* array.d (elt_copy_T_Char, ssstring_extend_low): Make it compile
	with CHART_STRUCT.
	* charstrg.d (copy_string, subsstring, SUBSTRING, string_concat):
	Likewise.
	* io.d (write_sstring_case): LIkewise.
	* lisparit.d (decimal_string): Likewise.
	* pathname.d (Z_AT_SLASH): Fix for changed return type of schar.
	(wildcard_diff_ab): Likewise.

2002-06-20  Sam Steingold  <sds@gnu.org>

	* record.d (COPY-STRUCTURE): use memcpy() instead of dotimespC
	(call_init_fun): new function
	(%REINITIALIZE-INSTANCE, do_initialize_instance): use it

2002-06-20  Sam Steingold  <sds@gnu.org>

	* spvw_typealloc.d (reallocate_small_string) [TYPECODES]:
	fixed a typo

2002-06-19  Sam Steingold  <sds@gnu.org>

	* pathname.d (nametype_diff_aux): treat logical and physical
	pathnames the same way

2002-06-19  Sam Steingold  <sds@gnu.org>

	* encoding.d (MAKE-ENCODING): new keyword argument
	:IF-DOES-NOT-EXIST to return nil for non-existing charsets
	(init_encodings_2): when the charset does not exist,
	just unintern the symbol
	(encoding_from_name): pushSTACK() the extra keyword argument for
	C_make_encoding()
	* subr.d, subrkw.d (make_encoding): new keyword argument
	* lispbibl.d (check_charset): return bool
	* stream.d (open_iconv): do not barf when charset is nullobj
	(check_charset): return false when code is invalid and charset is
	nullobj

2002-06-19  Bruno Haible  <bruno@clisp.org>

	* constsym.d (CHARSET:ARMSCII-8, CHARSET:TCVN): Disable in glibc-2.2.

2002-06-19  Sam Steingold  <sds@gnu.org>
